# Search-Spotify-Music

./: .gitignore  README.md  env.sample  pyproject.toml
src/: config.py  main.py  spotipy_utils.py
